# contiguous-fft

./: ChangeLog.md  README.md  cabal.project  contiguous-fft.cabal
src/Data/Primitive/Contiguous/: FFT.hs
test/: Spec.hs
