cabal-version: 2.2
name:
  contiguous-fft
version:
  0.2.2.1
synopsis:
  dft of Contiguous data structures
description:
  DFT and iDFT on data structures implementing a common
  Contiguous interface
homepage:
  https://github.com/haskell-primitive/contiguous-fft
license:
  BSD-3-Clause
license-file:
  LICENSE
author:
  chessai
maintainer:
  chessai <chessai1996@gmail.com>
copyright:
  2018 (c) chessai
category:
  Data
build-type:
  Simple
extra-source-files:
  ChangeLog.md

library
  exposed-modules:
    Data.Primitive.Contiguous.FFT
  build-depends:
    , base >=4.9 && <5
    , contiguous >=0.3
    , primitive >= 0.6.4
    , semirings >= 0.3
  hs-source-dirs:
    src
  default-language:
    Haskell2010
  ghc-options:
    -Wall
    -O2

test-suite spec
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    test
  main-is:
    Spec.hs
  default-language:
    Haskell2010
  build-depends:
   , base
   , primitive
   , hedgehog
   , contiguous-fft
   , prim-instances >= 0.2 && < 0.3
   , math-functions

source-repository head
  type: git
  location: https://github.com/haskell-primitive/contiguous-fft.git

